[package]
name = "finished_game"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.3.0"
bevy = "0.16.0"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type-complexity = "allow"
too-many-arguments = "allow"
double-parens = "allow"

[lints.rust]
unused_parens = "allow"
