[package]
name = "flappy_block"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = { version = "0.3.0" }
bevy = "0.16.0"
rand = "0.9.1"
getrandom = { version = "0.3", features = ["wasm_js"] }


[lints.clippy]
type-complexity = "allow"
too-many-arguments = "allow"
double-parens = "allow"

[lints.rust]
unused_parens = "allow"
