[package]
name = "flappy_block"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
avian2d.workspace = true
rand.workspace = true
getrandom.workspace = true


[lints.clippy]
type-complexity = "allow"
too-many-arguments = "allow"
double-parens = "allow"

[lints.rust]
unused_parens = "allow"
